@@ -11,7 +11,7 @@ ActionController::Routing::Routes.draw do |map|
 
   # You can have the root of your site routed by hooking up '' 
   # -- just remember to delete public/index.html.
-  map.connect '', :controller => 'home'
+  map.root :controller => 'home'
 
   # Allow downloading Web Service WSDL as a file with an extension
   # instead of a file named 'wsdl'
